--- a/templates/index.html
+++ b/templates/index.html
@@ -1,57 +1,12 @@
 <html>
 	<head>
-		<title>Schedule Prediction - Test Site</title>
+		<title>Schedule Duration - Test Site</title>
 	</head>
 	<body>
 		<div class="main">
-		<h1>Schedule Prediction</h1>
+		<h1>Schedule Duration</h1>
 
-<pre>
-Example:
-
-Account (Label Encoding): 124
-Account (Data Source): 
- - CDC Facilities Mgt ltd, The Stables, 2 Wassel Grove Lane, Hagley, Stourbridge DY9 9JH
- - United Kingdom
- - Justin Donoghue
- - justin@cdc-fm.co.uk
-
-Branch (Label Encoding): 3
-Branch (Data Source):
- - Esco Micro Pte Ltd 21 Changi South Street 1 486777
- - Singapore
-
-Units (Label Encoding): 2
-Units (Data Source): 2 units
-
-</pre>
-<hr/>
-		<form action="{{ url_for('predict')}}" method="post">
-			Account: <input type="text" name="account" placeholder="124" required="required"/><br/>
-			Branch: <input type="text" name="branch" placeholder="3" required="required"/><br/>
-			Units: <input type="text" name="units" placeholder="2" required="required"/><br/>
-			<button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
-		</form>
-<hr/>
-		<br>
 		
-		{{ prediction_text }}
-		<br>
-		{{ total_days }}
-		<br>
-		{{ total_hours }}
-		<br>
-		<img src="https://raw.githubusercontent.com/clydeatesco/SchedulePredictionDemo/main/trial14.png" />
 
-		</div>
 	</body>
 </html>
-	
-<!--
-NANO Cheat Sheet
-=========================
-Ctrl + o   = Save Changes
-Ctrl + x   = Close File
-Ctrl + k   = Cut Text
-Ctrl + u   = Paste Text
--->
