--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,14 @@
 <html>
+	<head>
+		<title>Service Scheduling</title>
+	</head>
+	<body>
+		<span> func is {{ func }} </span>
+	</body>
+</html>
+
+<!--
+<html>
 <head>
 	<title></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script><script  defer src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en&key=AIzaSyCGU0PK5ks0K4jqqAZ6l2A6FKWUknklPkM"  type="text/javascript"></script>
@@ -103,3 +113,4 @@
 
 </script></body>
 </html>
+-->
