--- a/templates/index.html
+++ b/templates/index.html
@@ -204,7 +204,7 @@ input[type=text] {
 					// html += `<td>${dst}</td>`;				
 
 					//const proxyurl = "https://corsanywhere.herokuapp.com/";
-					const proxyurl = "";
+					const proxyurl = "https://cors-anywhere.herokuapp.com/";
 					const url = 'https://maps.googleapis.com/maps/api/distancematrix/json?origins='+src+'&destinations='+dst+'&key=AIzaSyAwUCVZYXQd8KbN5EcxxLC1UuM3naKt0X8';
 					let result = [];
 					await fetch(proxyurl+url)
